# encounter_phrases

./: README.md  docker-compose.yaml  pyproject.toml
src/: Dockerfile  __main__.py  const.py  settings.py  utils.py
src/handlers/: user_handlers.py
src/keyboards/: main_menu.py
src/lexicon/: lexicon.py
